[gd_scene load_steps=18 format=4 uid="uid://0to8fpypdi2o"]

[ext_resource type="Texture2D" uid="uid://dtlkxxjgx7kgk" path="res://Assets/Tilemaps/tilemap_packed.png" id="1_br8f6"]
[ext_resource type="Script" path="res://Scripts/Level.gd" id="1_jte4e"]
[ext_resource type="PackedScene" uid="uid://cmlolrx5kn048" path="res://Scenes/Player/Player.tscn" id="2_mjrel"]
[ext_resource type="Texture2D" uid="uid://brduuwtutrg5n" path="res://Assets/Tilemaps/tilemap-backgrounds.png" id="3_w63vh"]
[ext_resource type="PackedScene" uid="uid://doic3uabqhxo" path="res://Scenes/Objects/Coin.tscn" id="4_k158y"]
[ext_resource type="PackedScene" uid="uid://uuefuoo8mrye" path="res://Scenes/Monsters/AlienPlatform.tscn" id="5_dh5n2"]
[ext_resource type="PackedScene" uid="uid://b8yu7c66jgymi" path="res://Scenes/Monsters/BatFlying.tscn" id="5_k8qdw"]
[ext_resource type="PackedScene" uid="uid://ow1u042tspd4" path="res://Scenes/Player/GUI.tscn" id="7_1wodk"]
[ext_resource type="PackedScene" uid="uid://c07x763co4pl0" path="res://Scenes/GameOver.tscn" id="8_nwagn"]
[ext_resource type="PackedScene" uid="uid://ba2yca4gkbcmw" path="res://Scenes/Levels/LevelComplete.tscn" id="10_8vp6a"]
[ext_resource type="PackedScene" uid="uid://0eau2lskot6e" path="res://Scenes/Levels/Level2.tscn" id="11_mg1we"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_cls01"]
texture = ExtResource("1_br8f6")
texture_region_size = Vector2i(18, 18)
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
1:0/0/terrains_peering_bit/right_side = 0
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrain = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
2:0/0/terrains_peering_bit/right_side = 0
2:0/0/terrains_peering_bit/left_side = 0
3:0/0 = 0
3:0/0/terrain_set = 0
3:0/0/terrain = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
3:0/0/terrains_peering_bit/left_side = 0
4:0/0 = 0
4:0/0/terrain_set = 0
4:0/0/terrain = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
4:0/0/terrains_peering_bit/right_side = 0
4:0/0/terrains_peering_bit/bottom_side = 0
4:0/0/terrains_peering_bit/left_side = 0
4:0/0/terrains_peering_bit/top_side = 0
5:0/0 = 0
5:0/0/terrain_set = 0
5:0/0/terrain = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
5:0/0/terrains_peering_bit/right_side = 0
5:0/0/terrains_peering_bit/bottom_side = 0
5:0/0/terrains_peering_bit/left_side = 0
5:0/0/terrains_peering_bit/top_side = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
0:1/0/terrains_peering_bit/bottom_side = 0
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
1:1/0/terrains_peering_bit/right_side = 0
1:1/0/terrains_peering_bit/bottom_side = 0
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
2:1/0/terrains_peering_bit/right_side = 0
2:1/0/terrains_peering_bit/bottom_side = 0
2:1/0/terrains_peering_bit/left_side = 0
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/terrain = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
3:1/0/terrains_peering_bit/bottom_side = 0
3:1/0/terrains_peering_bit/left_side = 0
4:1/0 = 0
4:1/0/terrain_set = 0
4:1/0/terrain = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
4:1/0/terrains_peering_bit/right_side = 0
4:1/0/terrains_peering_bit/bottom_side = 0
4:1/0/terrains_peering_bit/left_side = 0
4:1/0/terrains_peering_bit/top_side = 0
5:1/0 = 0
5:1/0/terrain_set = 0
5:1/0/terrain = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
5:1/0/terrains_peering_bit/right_side = 0
5:1/0/terrains_peering_bit/bottom_side = 0
5:1/0/terrains_peering_bit/left_side = 0
5:1/0/terrains_peering_bit/top_side = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/terrain = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/terrain = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
1:2/0/terrains_peering_bit/right_side = 0
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/terrain = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
2:2/0/terrains_peering_bit/right_side = 0
2:2/0/terrains_peering_bit/left_side = 0
3:2/0 = 0
3:2/0/terrain_set = 0
3:2/0/terrain = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
3:2/0/terrains_peering_bit/left_side = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
0:3/0 = 0
0:3/0/terrain_set = 0
0:3/0/terrain = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
0:3/0/terrains_peering_bit/bottom_side = 0
1:3/0 = 0
1:3/0/terrain_set = 0
1:3/0/terrain = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
1:3/0/terrains_peering_bit/right_side = 0
1:3/0/terrains_peering_bit/bottom_side = 0
2:3/0 = 0
2:3/0/terrain_set = 0
2:3/0/terrain = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
2:3/0/terrains_peering_bit/right_side = 0
2:3/0/terrains_peering_bit/bottom_side = 0
2:3/0/terrains_peering_bit/left_side = 0
3:3/0 = 0
3:3/0/terrain_set = 0
3:3/0/terrain = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
3:3/0/terrains_peering_bit/bottom_side = 0
3:3/0/terrains_peering_bit/left_side = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
0:4/0 = 0
0:4/0/terrain_set = 0
0:4/0/terrain = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
1:4/0 = 0
1:4/0/terrain_set = 0
1:4/0/terrain = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
1:4/0/terrains_peering_bit/right_side = 0
2:4/0 = 0
2:4/0/terrain_set = 0
2:4/0/terrain = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
2:4/0/terrains_peering_bit/right_side = 0
2:4/0/terrains_peering_bit/left_side = 0
3:4/0 = 0
3:4/0/terrain_set = 0
3:4/0/terrain = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
3:4/0/terrains_peering_bit/left_side = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
0:5/0 = 0
0:5/0/terrain_set = 0
0:5/0/terrain = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
0:5/0/terrains_peering_bit/bottom_side = 0
1:5/0 = 0
1:5/0/terrain_set = 0
1:5/0/terrain = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
1:5/0/terrains_peering_bit/right_side = 0
1:5/0/terrains_peering_bit/bottom_side = 0
2:5/0 = 0
2:5/0/terrain_set = 0
2:5/0/terrain = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
2:5/0/terrains_peering_bit/right_side = 0
2:5/0/terrains_peering_bit/bottom_side = 0
2:5/0/terrains_peering_bit/left_side = 0
3:5/0 = 0
3:5/0/terrain_set = 0
3:5/0/terrain = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
3:5/0/terrains_peering_bit/bottom_side = 0
3:5/0/terrains_peering_bit/left_side = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
0:6/0 = 0
0:6/0/terrain_set = 0
0:6/0/terrain = 0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
0:6/0/terrains_peering_bit/bottom_side = 0
0:6/0/terrains_peering_bit/top_side = 0
1:6/0 = 0
1:6/0/terrain_set = 0
1:6/0/terrain = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
1:6/0/terrains_peering_bit/right_side = 0
1:6/0/terrains_peering_bit/bottom_side = 0
1:6/0/terrains_peering_bit/top_side = 0
2:6/0 = 0
2:6/0/terrain_set = 0
2:6/0/terrain = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
2:6/0/terrains_peering_bit/right_side = 0
2:6/0/terrains_peering_bit/bottom_side = 0
2:6/0/terrains_peering_bit/left_side = 0
2:6/0/terrains_peering_bit/top_side = 0
3:6/0 = 0
3:6/0/terrain_set = 0
3:6/0/terrain = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
3:6/0/terrains_peering_bit/bottom_side = 0
3:6/0/terrains_peering_bit/left_side = 0
3:6/0/terrains_peering_bit/top_side = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
0:7/0 = 0
0:7/0/terrain_set = 0
0:7/0/terrain = 0
0:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
0:7/0/terrains_peering_bit/top_side = 0
1:7/0 = 0
1:7/0/terrain_set = 0
1:7/0/terrain = 0
1:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
1:7/0/terrains_peering_bit/right_side = 0
1:7/0/terrains_peering_bit/top_side = 0
2:7/0 = 0
2:7/0/terrain_set = 0
2:7/0/terrain = 0
2:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
2:7/0/terrains_peering_bit/right_side = 0
2:7/0/terrains_peering_bit/left_side = 0
2:7/0/terrains_peering_bit/top_side = 0
3:7/0 = 0
3:7/0/terrain_set = 0
3:7/0/terrain = 0
3:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)
3:7/0/terrains_peering_bit/left_side = 0
3:7/0/terrains_peering_bit/top_side = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0

[sub_resource type="TileSet" id="TileSet_erqgw"]
tile_size = Vector2i(18, 18)
physics_layer_0/collision_layer = 7
physics_layer_0/collision_mask = 7
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Dirt"
terrain_set_0/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
sources/2 = SubResource("TileSetAtlasSource_cls01")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_i41ww"]
resource_name = "Background"
texture = ExtResource("3_w63vh")
separation = Vector2i(1, 1)
texture_region_size = Vector2i(24, 24)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0

[sub_resource type="TileSet" id="TileSet_pt31b"]
tile_size = Vector2i(24, 24)
sources/0 = SubResource("TileSetAtlasSource_i41ww")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kv8b2"]
size = Vector2(22, 488)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ibh8h"]
size = Vector2(2692, 20)

[node name="Level1" type="Node2D"]
script = ExtResource("1_jte4e")

[node name="GameTileMapLayer" type="TileMapLayer" parent="."]
use_parent_material = true
position = Vector2(1, -1)
scale = Vector2(1.00261, 1)
tile_map_data = PackedByteArray("AAAfABEAAgADAAcAAAAeABEAAgACAAIAAAAdABEAAgACAAIAAAAcABEAAgACAAAAAAAbABEAAgACAAQAAAAaABEAAgACAAAAAAAZABEAAgACAAAAAAAYABEAAgACAAQAAAAXABEAAgACAAIAAAAWABEAAgACAAcAAAAVABEAAgACAAcAAAAUABEAAgACAAcAAAATABEAAgACAAcAAAASABEAAgACAAcAAAARABEAAgACAAcAAAAQABEAAgACAAcAAAAPABEAAgACAAcAAAAOABEAAgACAAcAAAAOABAAAgABAAYAAAANABEAAgACAAIAAAAMABEAAgACAAAAAAALABEAAgACAAAAAAAKABEAAgACAAQAAAAJABEAAgACAAQAAAAIABEAAgACAAQAAAAHABEAAgACAAAAAAAGABEAAgACAAQAAAAFABEAAgACAAQAAAAEABEAAgACAAQAAAADABEAAgACAAQAAAACABEAAgACAAAAAAABABEAAgACAAIAAAAAABEAAgABAAcAAAAfABAAAgAAAAYAAAAfAA8AAgAAAAYAAAAfAA4AAgAAAAYAAAAfAA0AAgAAAAYAAAAfAAwAAgAAAAYAAAAfAAsAAgAAAAYAAAAfAAoAAgAAAAYAAAAfAAkAAgAAAAYAAAAFAAQAAgACAAAAAAAGAAQAAgACAAcAAAAHAAQAAgACAAcAAAAIAAQAAgADAAcAAAAKAAQAAgABAAEAAAALAAUAAgADAAcAAAAOAAUAAgABAAcAAAAPAAUAAgACAAcAAAAQAAUAAgADAAYAAAAQAAYAAgAAAAcAAAATAAgAAgAAAAMAAAASAAkAAgACAAQAAAARAAkAAgACAAUAAAAPAAkAAgACAAIAAAAQAAkAAgACAAQAAAAOAAkAAgACAAcAAAANAAkAAgAFAAEAAAAMAAkAAgABAAYAAAAKAAgAAgABAAcAAAAJAAcAAgACAAIAAAAKAAUAAgABAAYAAAAGAAcAAgACAAAAAAAHAAcAAgACAAIAAAAIAAcAAgACAAQAAAAKAAcAAgADAAYAAAALAAgAAgACAAQAAAAMAAgAAgACAAEAAAANAAgAAgACAAMAAAAKAAYAAgAAAAYAAAAOAAgAAgADAAEAAAANAAoAAgADAAcAAAAMAAoAAgABAAYAAAALAAsAAgABAAIAAAARAAoAAgAAAAYAAAARAAsAAgAAAAYAAAAQAAwAAgACAAIAAAAPAAwAAgABAAIAAAARAAwAAgACAAcAAAASAAwAAgACAAEAAAATAAwAAgACAAMAAAAUAAwAAgADAAEAAAATAA0AAgACAAcAAAASAA0AAgABAAcAAAAUAA0AAgACAAcAAAAVAA0AAgACAAIAAAAWAA0AAgACAAQAAAAXAA0AAgACAAcAAAAYAA0AAgACAAcAAAAYAAwAAgAFAAEAAAAXAAwAAgABAAMAAAAYAAsAAgABAAUAAAAZAAsAAgAFAAAAAAAZAAoAAgABAAEAAAAaAAoAAgACAAMAAAAbAAoAAgACAAMAAAAcAAoAAgADAAUAAAAaAAsAAgAEAAAAAAAZAAwAAgACAAYAAAAaAAwAAgADAAYAAAAbAAsAAgACAAcAAAAcAAsAAgADAAcAAAAaAA0AAgADAAYAAAAZAA0AAgAEAAEAAAAcAA4AAgACAAAAAAAdAA4AAgADAAIAAAAbAA4AAgACAAIAAAAaAA4AAgACAAcAAAAZAA4AAgABAAcAAAAWABAAAgADAAEAAAAVABAAAgACAAEAAAAUABAAAgACAAMAAAATABAAAgACAAEAAAASABAAAgACAAUAAAARABAAAgACAAMAAAAQABAAAgACAAMAAAAPABAAAgACAAYAAAAPAA8AAgADAAMAAAAOAA8AAgACAAUAAAANAA4AAgADAAUAAAAMAA4AAgACAAIAAAAKAA4AAgACAAAAAAALAA4AAgACAAAAAAAHAA4AAgADAAcAAAAGAA4AAgACAAAAAAAFAA4AAgACAAcAAAAEAA4AAgACAAAAAAADAA4AAgACAAIAAAAFAAwAAgAAAAYAAAAFAA0AAgAAAAYAAAACAA0AAgAAAAUAAAACAA4AAgABAAcAAAAFAAsAAgADAAYAAAAFAAoAAgACAAUAAAAEAAoAAgACAAMAAAADAAoAAgACAAQAAAAEAAQAAgACAAIAAAADAAQAAgACAAQAAAACAAQAAgACAAIAAAABAAQAAgACAAcAAAABAAMAAgADAAMAAAAAAAMAAgABAAMAAAAAAAQAAgABAAYAAAABAAkAAgADAAUAAAAAAAkAAgABAAYAAAAAABAAAgAAAAYAAAAMAAsAAgADAAcAAAATAAkAAgADAAcAAAAGAAMAAgABAAEAAAAHAAMAAgACAAMAAAAIAAMAAgADAAMAAAAfAAgAAgADAAMAAAAeAAgAAgABAAIAAAAeAAcAAgAIAAQAAAAFAAcAAgACAAQAAAAEAAcAAgACAAAAAAADAAcAAgABAAIAAAAAAAgAAgAAAAYAAAAAAAcAAgAAAAYAAAAAAAYAAgAAAAYAAAAAAAUAAgAAAAYAAAACAAoAAgACAAIAAAABAAoAAgACAAcAAAAAAAoAAgABAAYAAAALAAQAAgACAAUAAAAMAAQAAgACAAAAAAANAAQAAgACAAQAAAAOAAQAAgACAAUAAAAPAAQAAgACAAUAAAAQAAQAAgACAAEAAAARAAQAAgACAAQAAAASAAQAAgACAAIAAAATAAQAAgADAAEAAAATAAUAAgAAAAcAAAAAAAsAAgAAAAYAAAAAAAwAAgAAAAYAAAAAAA0AAgAAAAYAAAAAAA4AAgAAAAYAAAAAAA8AAgAAAAYAAAAEAAsAAgABAAcAAAAJAA4AAgABAAAAAAAIAAoAAgADAAAAAAAHAAoAAgACAAAAAAAGAAoAAgACAAQAAAAHAA0AAgAAAAEAAAANAA8AAgABAAcAAAA=")
tile_set = SubResource("TileSet_erqgw")
rendering_quadrant_size = 18

[node name="Player" parent="." instance=ExtResource("2_mjrel")]
position = Vector2(63, 54)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -2

[node name="BackgroundTileMapLayer" type="TileMapLayer" parent="CanvasLayer"]
tile_map_data = PackedByteArray("AAAAAAcAAAAAAAIAAAABAAcAAAABAAIAAAACAAcAAAACAAIAAAADAAcAAAADAAIAAAAAAAgAAAAGAAIAAAABAAgAAAAHAAIAAAACAAgAAAAGAAIAAAADAAgAAAAHAAIAAAAAAAkAAAAEAAIAAAABAAkAAAAFAAIAAAACAAkAAAAEAAIAAAADAAkAAAAFAAIAAAAAAAoAAAAEAAIAAAABAAoAAAAFAAIAAAACAAoAAAAEAAIAAAADAAoAAAAFAAIAAAAAAAsAAAAEAAIAAAABAAsAAAAFAAIAAAACAAsAAAAEAAIAAAADAAsAAAAFAAIAAAAAAAwAAAAEAAIAAAABAAwAAAAFAAIAAAACAAwAAAAEAAIAAAADAAwAAAAFAAIAAAAAAA0AAAAEAAIAAAABAA0AAAAFAAIAAAACAA0AAAAEAAIAAAADAA0AAAAFAAIAAAAEAAcAAAAAAAIAAAAFAAcAAAABAAIAAAAGAAcAAAACAAIAAAAHAAcAAAADAAIAAAAEAAgAAAAGAAIAAAAFAAgAAAAHAAIAAAAGAAgAAAAGAAIAAAAHAAgAAAAHAAIAAAAEAAkAAAAEAAIAAAAFAAkAAAAFAAIAAAAGAAkAAAAEAAIAAAAHAAkAAAAFAAIAAAAEAAoAAAAEAAIAAAAFAAoAAAAFAAIAAAAGAAoAAAAEAAIAAAAHAAoAAAAFAAIAAAAEAAsAAAAEAAIAAAAFAAsAAAAFAAIAAAAGAAsAAAAEAAIAAAAHAAsAAAAFAAIAAAAEAAwAAAAEAAIAAAAFAAwAAAAFAAIAAAAGAAwAAAAEAAIAAAAHAAwAAAAFAAIAAAAEAA0AAAAEAAIAAAAFAA0AAAAFAAIAAAAGAA0AAAAEAAIAAAAHAA0AAAAFAAIAAAAIAAcAAAAAAAIAAAAJAAcAAAABAAIAAAAKAAcAAAACAAIAAAALAAcAAAADAAIAAAAIAAgAAAAGAAIAAAAJAAgAAAAHAAIAAAAKAAgAAAAGAAIAAAALAAgAAAAHAAIAAAAIAAkAAAAEAAIAAAAJAAkAAAAFAAIAAAAKAAkAAAAEAAIAAAALAAkAAAAFAAIAAAAIAAoAAAAEAAIAAAAJAAoAAAAFAAIAAAAKAAoAAAAEAAIAAAALAAoAAAAFAAIAAAAIAAsAAAAEAAIAAAAJAAsAAAAFAAIAAAAKAAsAAAAEAAIAAAALAAsAAAAFAAIAAAAIAAwAAAAEAAIAAAAJAAwAAAAFAAIAAAAKAAwAAAAEAAIAAAALAAwAAAAFAAIAAAAIAA0AAAAEAAIAAAAJAA0AAAAFAAIAAAAKAA0AAAAEAAIAAAALAA0AAAAFAAIAAAAMAAcAAAAAAAIAAAANAAcAAAABAAIAAAAOAAcAAAACAAIAAAAPAAcAAAADAAIAAAAMAAgAAAAGAAIAAAANAAgAAAAHAAIAAAAOAAgAAAAGAAIAAAAPAAgAAAAHAAIAAAAMAAkAAAAEAAIAAAANAAkAAAAFAAIAAAAOAAkAAAAEAAIAAAAPAAkAAAAFAAIAAAAMAAoAAAAEAAIAAAANAAoAAAAFAAIAAAAOAAoAAAAEAAIAAAAPAAoAAAAFAAIAAAAMAAsAAAAEAAIAAAANAAsAAAAFAAIAAAAOAAsAAAAEAAIAAAAPAAsAAAAFAAIAAAAMAAwAAAAEAAIAAAANAAwAAAAFAAIAAAAOAAwAAAAEAAIAAAAPAAwAAAAFAAIAAAAMAA0AAAAEAAIAAAANAA0AAAAFAAIAAAAOAA0AAAAEAAIAAAAPAA0AAAAFAAIAAAAQAAcAAAAAAAIAAAARAAcAAAABAAIAAAASAAcAAAACAAIAAAATAAcAAAADAAIAAAAQAAgAAAAGAAIAAAARAAgAAAAHAAIAAAASAAgAAAAGAAIAAAATAAgAAAAHAAIAAAAQAAkAAAAEAAIAAAARAAkAAAAFAAIAAAASAAkAAAAEAAIAAAATAAkAAAAFAAIAAAAQAAoAAAAEAAIAAAARAAoAAAAFAAIAAAASAAoAAAAEAAIAAAATAAoAAAAFAAIAAAAQAAsAAAAEAAIAAAARAAsAAAAFAAIAAAASAAsAAAAEAAIAAAATAAsAAAAFAAIAAAAQAAwAAAAEAAIAAAARAAwAAAAFAAIAAAASAAwAAAAEAAIAAAATAAwAAAAFAAIAAAAQAA0AAAAEAAIAAAARAA0AAAAFAAIAAAASAA0AAAAEAAIAAAATAA0AAAAFAAIAAAAUAAcAAAAAAAIAAAAVAAcAAAABAAIAAAAWAAcAAAACAAIAAAAXAAcAAAADAAIAAAAUAAgAAAAGAAIAAAAVAAgAAAAHAAIAAAAWAAgAAAAGAAIAAAAXAAgAAAAHAAIAAAAUAAkAAAAEAAIAAAAVAAkAAAAFAAIAAAAWAAkAAAAEAAIAAAAXAAkAAAAFAAIAAAAUAAoAAAAEAAIAAAAVAAoAAAAFAAIAAAAWAAoAAAAEAAIAAAAXAAoAAAAFAAIAAAAUAAsAAAAEAAIAAAAVAAsAAAAFAAIAAAAWAAsAAAAEAAIAAAAXAAsAAAAFAAIAAAAUAAwAAAAEAAIAAAAVAAwAAAAFAAIAAAAWAAwAAAAEAAIAAAAXAAwAAAAFAAIAAAAUAA0AAAAEAAIAAAAVAA0AAAAFAAIAAAAWAA0AAAAEAAIAAAAXAA0AAAAFAAIAAAAAAAYAAAAAAAEAAAABAAYAAAABAAEAAAACAAYAAAACAAEAAAADAAYAAAADAAEAAAAEAAYAAAAAAAEAAAAFAAYAAAABAAEAAAAGAAYAAAACAAEAAAAHAAYAAAADAAEAAAAIAAYAAAAAAAEAAAAJAAYAAAABAAEAAAAKAAYAAAACAAEAAAALAAYAAAADAAEAAAAMAAYAAAAAAAEAAAANAAYAAAABAAEAAAAOAAYAAAACAAEAAAAPAAYAAAADAAEAAAAQAAYAAAAAAAEAAAARAAYAAAABAAEAAAASAAYAAAACAAEAAAATAAYAAAADAAEAAAAUAAYAAAAAAAEAAAAVAAYAAAABAAEAAAAWAAYAAAACAAEAAAAXAAYAAAADAAEAAAAAAAAAAAAAAAAAAAABAAAAAAABAAAAAAACAAAAAAACAAAAAAADAAAAAAADAAAAAAAAAAEAAAAAAAAAAAABAAEAAAABAAAAAAACAAEAAAACAAAAAAADAAEAAAADAAAAAAAAAAIAAAAAAAAAAAABAAIAAAABAAAAAAACAAIAAAACAAAAAAADAAIAAAADAAAAAAAAAAMAAAAAAAAAAAABAAMAAAABAAAAAAACAAMAAAACAAAAAAADAAMAAAADAAAAAAAAAAQAAAAAAAAAAAABAAQAAAABAAAAAAACAAQAAAACAAAAAAADAAQAAAADAAAAAAAAAAUAAAAAAAAAAAABAAUAAAABAAAAAAACAAUAAAACAAAAAAADAAUAAAADAAAAAAAEAAAAAAAAAAAAAAAFAAAAAAABAAAAAAAGAAAAAAACAAAAAAAHAAAAAAADAAAAAAAEAAEAAAAAAAAAAAAFAAEAAAABAAAAAAAGAAEAAAACAAAAAAAHAAEAAAADAAAAAAAEAAIAAAAAAAAAAAAFAAIAAAABAAAAAAAGAAIAAAACAAAAAAAHAAIAAAADAAAAAAAEAAMAAAAAAAAAAAAFAAMAAAABAAAAAAAGAAMAAAACAAAAAAAHAAMAAAADAAAAAAAEAAQAAAAAAAAAAAAFAAQAAAABAAAAAAAGAAQAAAACAAAAAAAHAAQAAAADAAAAAAAEAAUAAAAAAAAAAAAFAAUAAAABAAAAAAAGAAUAAAACAAAAAAAHAAUAAAADAAAAAAAIAAAAAAAAAAAAAAAJAAAAAAABAAAAAAAKAAAAAAACAAAAAAALAAAAAAADAAAAAAAIAAEAAAAAAAAAAAAJAAEAAAABAAAAAAAKAAEAAAACAAAAAAALAAEAAAADAAAAAAAIAAIAAAAAAAAAAAAJAAIAAAABAAAAAAAKAAIAAAACAAAAAAALAAIAAAADAAAAAAAIAAMAAAAAAAAAAAAJAAMAAAABAAAAAAAKAAMAAAACAAAAAAALAAMAAAADAAAAAAAIAAQAAAAAAAAAAAAJAAQAAAABAAAAAAAKAAQAAAACAAAAAAALAAQAAAADAAAAAAAIAAUAAAAAAAAAAAAJAAUAAAABAAAAAAAKAAUAAAACAAAAAAALAAUAAAADAAAAAAAMAAAAAAAAAAAAAAANAAAAAAABAAAAAAAOAAAAAAACAAAAAAAPAAAAAAADAAAAAAAMAAEAAAAAAAAAAAANAAEAAAABAAAAAAAOAAEAAAACAAAAAAAPAAEAAAADAAAAAAAMAAIAAAAAAAAAAAANAAIAAAABAAAAAAAOAAIAAAACAAAAAAAPAAIAAAADAAAAAAAMAAMAAAAAAAAAAAANAAMAAAABAAAAAAAOAAMAAAACAAAAAAAPAAMAAAADAAAAAAAMAAQAAAAAAAAAAAANAAQAAAABAAAAAAAOAAQAAAACAAAAAAAPAAQAAAADAAAAAAAMAAUAAAAAAAAAAAANAAUAAAABAAAAAAAOAAUAAAACAAAAAAAPAAUAAAADAAAAAAAQAAAAAAAAAAAAAAARAAAAAAABAAAAAAASAAAAAAACAAAAAAATAAAAAAADAAAAAAAQAAEAAAAAAAAAAAARAAEAAAABAAAAAAASAAEAAAACAAAAAAATAAEAAAADAAAAAAAQAAIAAAAAAAAAAAARAAIAAAABAAAAAAASAAIAAAACAAAAAAATAAIAAAADAAAAAAAQAAMAAAAAAAAAAAARAAMAAAABAAAAAAASAAMAAAACAAAAAAATAAMAAAADAAAAAAAQAAQAAAAAAAAAAAARAAQAAAABAAAAAAASAAQAAAACAAAAAAATAAQAAAADAAAAAAAQAAUAAAAAAAAAAAARAAUAAAABAAAAAAASAAUAAAACAAAAAAATAAUAAAADAAAAAAAUAAAAAAAAAAAAAAAVAAAAAAABAAAAAAAWAAAAAAACAAAAAAAXAAAAAAADAAAAAAAUAAEAAAAAAAAAAAAVAAEAAAABAAAAAAAWAAEAAAACAAAAAAAXAAEAAAADAAAAAAAUAAIAAAAAAAAAAAAVAAIAAAABAAAAAAAWAAIAAAACAAAAAAAXAAIAAAADAAAAAAAUAAMAAAAAAAAAAAAVAAMAAAABAAAAAAAWAAMAAAACAAAAAAAXAAMAAAADAAAAAAAUAAQAAAAAAAAAAAAVAAQAAAABAAAAAAAWAAQAAAACAAAAAAAXAAQAAAADAAAAAAAUAAUAAAAAAAAAAAAVAAUAAAABAAAAAAAWAAUAAAACAAAAAAAXAAUAAAADAAAAAAA=")
tile_set = SubResource("TileSet_pt31b")

[node name="Coins" type="Node" parent="."]

[node name="Coin" parent="Coins" instance=ExtResource("4_k158y")]
position = Vector2(192, 63)

[node name="Coin2" parent="Coins" instance=ExtResource("4_k158y")]
position = Vector2(240, 63)

[node name="Coin3" parent="Coins" instance=ExtResource("4_k158y")]
position = Vector2(280, 63)

[node name="Coin4" parent="Coins" instance=ExtResource("4_k158y")]
position = Vector2(232, 136)

[node name="Coin5" parent="Coins" instance=ExtResource("4_k158y")]
position = Vector2(64, 240)

[node name="Coin6" parent="Coins" instance=ExtResource("4_k158y")]
position = Vector2(241, 296)

[node name="Coin7" parent="Coins" instance=ExtResource("4_k158y")]
position = Vector2(312, 280)

[node name="Coin8" parent="Coins" instance=ExtResource("4_k158y")]
position = Vector2(296, 208)

[node name="Coin9" parent="Coins" instance=ExtResource("4_k158y")]
position = Vector2(496, 240)

[node name="Coin10" parent="Coins" instance=ExtResource("4_k158y")]
position = Vector2(472, 72)

[node name="PlatformEnemy" type="Node" parent="."]

[node name="Alien" parent="PlatformEnemy" instance=ExtResource("5_dh5n2")]
position = Vector2(490, 168)

[node name="Alien2" parent="PlatformEnemy" instance=ExtResource("5_dh5n2")]
position = Vector2(351, 204)

[node name="Alien3" parent="PlatformEnemy" instance=ExtResource("5_dh5n2")]
position = Vector2(119, 295)

[node name="FlyingEnemy" type="Node" parent="."]

[node name="FlyingMob" parent="FlyingEnemy" instance=ExtResource("5_k8qdw")]
position = Vector2(39, 117)

[node name="FlyingMob2" parent="FlyingEnemy" instance=ExtResource("5_k8qdw")]
position = Vector2(181, 206)

[node name="FlyingMob3" parent="FlyingEnemy" instance=ExtResource("5_k8qdw")]
position = Vector2(429, 279)

[node name="FlyingMob4" parent="FlyingEnemy" instance=ExtResource("5_k8qdw")]
position = Vector2(326, 137)

[node name="GUI" parent="." instance=ExtResource("7_1wodk")]

[node name="GameOver" parent="." instance=ExtResource("8_nwagn")]
visible = false

[node name="Exits" type="Node" parent="."]

[node name="NoExit" type="Area2D" parent="Exits"]

[node name="BlockedPath" type="CollisionShape2D" parent="Exits/NoExit"]
position = Vector2(1, -171)
shape = SubResource("RectangleShape2D_kv8b2")

[node name="DeathGuard" type="Area2D" parent="Exits"]

[node name="DeathCollider" type="CollisionShape2D" parent="Exits/DeathGuard"]
position = Vector2(513, 333)
shape = SubResource("RectangleShape2D_ibh8h")

[node name="LevelComplete" parent="Exits" instance=ExtResource("10_8vp6a")]
position = Vector2(552, 133)
next_level = ExtResource("11_mg1we")

[connection signal="body_entered" from="Exits/NoExit" to="." method="_on_no_exit_body_entered"]
[connection signal="body_entered" from="Exits/DeathGuard" to="." method="_on_death_guard_body_entered"]
[connection signal="body_entered" from="Exits/LevelComplete" to="Exits/LevelComplete" method="_on_body_entered"]
